update lab3